2005-04-08  Nathaniel Smith  <njs@codesourcery.com>

	* {win32,unix}/fingerprint.cc: Rename to...
	* {win32,unix}/inodeprint.cc: ...this.  Change function name and
	calling conventions.
	* platform.hh (inodeprint_file): Likewise.
	* inodeprint.{cc,hh}: New files.
	* Makefile.am (MOST_SOURCES, UNIX_PLATFORM_SOURCES,
	WIN32_PLATFORM_SOURCES): Fixup accordingly.
	* vocab_terms.hh (inodeprint): New ATOMIC.
	* work.hh: Prototype inodeprint working copy functions.
	* work.cc: Implement them.

	* manifest.{hh,cc} (manifest_file_name): Remove unused variable.

2005-04-07  Nathaniel Smith  <njs@codesourcery.com>

	* manifest.{hh,cc}: Remove some commented out unused functions.

	* win32/have_smart_terminal.cc: Include platform.hh.
	* unix/fingerprint.cc: New file, with new function.
	* win32/fingerprint.cc: New file, with stub function.
	* Makefile.am (UNIX_PLATFORM_SOURCES, WIN32_PLATFORM_SOURCES): Add
	them.

2005-04-07  Nathaniel Smith  <njs@codesourcery.com>

	* manifest.hh, manifest.cc: Remove tabs.

2005-04-07  Nathaniel Smith  <njs@codesourcery.com>

	* tests/t_final_space.at: New test.
	* testsuite.at: Add it.

2005-04-07  Nathaniel Smith  <njs@codesourcery.com>

	* monotone.texi (Dealing with a Fork): 'merge' has slightly
	different output.

	* NEWS: Summarize changes of last 2.5 weeks.

2005-04-07  Nathaniel Smith  <njs@codesourcery.com>

	* database.{cc,hh} (space_usage): New method.
	* database.cc (info): Use it.

2005-04-07  Nathaniel Smith  <njs@codesourcery.com>

	* vocab.cc (verify): Cache known-good strings, to speed up
	repeated processing of related changesets.

	* change_set.cc (basic_change_set_test): Revert last change; the
	old version _was_ valid.

2005-04-06  Nathaniel Smith  <njs@codesourcery.com>

	* work.cc (build_deletions): Issue warning when generating
	delete_dir's; they're totally broken, but I don't want to disable
	them, because then our tests won't see when they're fixed...

2005-04-07  Nathaniel Smith  <njs@codesourcery.com>
