@@ -1,0 +1,19 @@
+AT_SETUP([update updates inodeprints])
+MONOTONE_SETUP
+
+ADD_FILE(testfile, [blah blah
+])
+COMMI(testbranch)
+R0=`BASE_REVISION`
+
+SET_FILE(testfile, [stuff stuff
+])
+COMMI(testbranch)
+R1=`BASE_REVISION`
+
+AT_CHECK(MONOTONE checkout --branch=testbranch $R0 td, [], [ignore], [ignore])
+AT_CHECK(touch td/MT/inodeprints)
+AT_CHECK(cd td && MONOTONE update, [], [ignore], [ignore])
+AT_CHECK(test -s td/MT/inodeprints)
+
+AT_CLEANUP
