@@ -536,3 +536,5 @@ m4_include(tests/t_at_sign.at)
 m4_include(tests/t_db_execute.at)
 m4_include(tests/t_sql_unpack.at)
 m4_include(tests/t_final_space.at)
+m4_include(tests/t_inodeprints.at)
+m4_include(tests/t_inodeprints_update.at)
